--- a/style.css
+++ b/style.css
@@ -3,6 +3,10 @@
     padding: 0px;
 }
 
+body {
+    font-family: Hind,sans-serif;
+}
+
 header {
     position: absolute;
     z-index: 2;
@@ -75,12 +79,14 @@ header {
 }
 
 .mainbtn {
-    width: 20%;
-    height: 50px;
-    margin-top: 20px;
+    margin-top: 25px;
     position: relative;
-    cursor:pointer;
-
+    cursor: pointer;
+    text-align: start;
+    padding: 12px;
+    width: 20%;
+    text-align: end;
+    font-weight: 550;
 }
 
 .mainbtn:hover {
@@ -89,16 +95,64 @@ header {
     color: white;
 }
 
-.mainbtn img {
-    position: absolute;
-    left: 15px;
-    bottom: 15px;
-}
-
 .mainbtn span {
     position: absolute;
-    right: 20px;
-    bottom: 15px;
-    font-weight: 550;
-    color: rgba(0, 0, 0, 0.568);
+    left: 10px;
+}
+
+.second-block {
+    width: 100%;
+    height: 100vh;
+}
+
+.title-products {
+    width: 40%;
+    margin: 60px auto;
+}
+
+.title-products h2 {
+    display: block;
+    text-align: center;
+    color: rgba(21, 22, 27, 0.781);
+
+}
+
+.title-products p {
+    display: block;
+    text-align: center;
+    font-size: 15px;
+    font-weight: 400;
+    margin-top: 10px;
+    color: rgba(81, 87, 105, 0.521)
+}
+
+.products {
+    width: 80%;
+    margin: 15px auto;
+}
+
+.products img {
+    width: 100%;
+}
+
+.product-title {
+    display:flex;
+    justify-content: space-between;
+    width: 80%;
+    margin-top: 15px;
+    align-items: flex-end;
+}
+
+.product {
+    width:30%;
+}
+
+.product-title h4 {
+    color: #515769;
+}
+
+.product-title p {
+    font-size: 14px;
+    font-weight: 400;
+    color: #bfc1c7;
 }
