--- a/style.css
+++ b/style.css
@@ -17,15 +17,15 @@ header {
 }
 
 .logo {
-    height: 45%;
-    width: 10%;
-    margin-top: 20px;
+    height: 35%;
+    width: 146px;
+    margin-top: 30px;
     margin-left: 80px;
 }
 
 .menu {
     display: flex;
-    margin-top: 25px;
+    margin-top: 30px;
     margin-right: 80px;
 }
 
@@ -128,7 +128,7 @@ header {
 
 .products {
     width: 80%;
-    margin: 15px auto;
+    margin: 30px auto;
 }
 
 .products img {
@@ -144,7 +144,7 @@ header {
 }
 
 .product {
-    width:30%;
+    width:35%;
 }
 
 .product-title h4 {
@@ -154,5 +154,208 @@ header {
 .product-title p {
     font-size: 14px;
     font-weight: 400;
-    color: #bfc1c7;
+    color:  #a6a7aa;
+}
+
+.workdiscr {
+width:35%;
+}
+
+.workdiscr p {
+    font-size: 15px;
+    font-weight: 400;
+    margin-top: 10px;
+    color: #a6a7aa;
+    }
+
+ .btnmore span {
+    font-size: 13px;
+    font-weight: 600;
+    text-align: start;
+    width: 20%;
+    bottom: 4px;
+    color: #81848f;
+ }   
+
+ .btnmore {
+    background-color: white;
+    left: 125px;
+    margin-top: 0.2px;
+    margin-bottom: 2px;
+    position: relative;
+    cursor: pointer;
+    border: 0;
+ }
+
+.product2 img {
+    width: 35%;
+    height: 41%;
+    margin-left: 38%;
+}
+
+.product2 {
+    position: relative;
+    width: 80%;
+    margin: 40px auto;
+    bottom: 73.2%;
+}
+
+.product2-title {
+    display:flex;
+    justify-content: space-between;
+    width: 30%;
+    margin-top: 15px;
+    align-items: flex-end;
+    margin-left: 38%;
+}
+
+.product2-title h4 {
+    color: #515769;
+}
+
+.product2-title p {
+    font-size: 13px;
+    margin-top: 2px;
+    color: #a6a7aa;
+    margin-bottom: 1px;
+}
+
+.minidiscr {
+    width:30%;
+    margin-left: 40.5%;
+    margin-top: -36%;
+}
+
+.minidiscr p {
+    font-size: 15px;
+    font-weight: 400;
+    margin-top: 10px;
+    color: #a6a7aa;
+    margin-bottom: 15px;
+}
+
+.btnmore2 span {
+    font-size: 13px;
+    font-weight: 600;
+    text-align: start;
+    width: 20%;
+    color: #81848f;
+ }   
+
+ .btnmore2 {
+    background-color: white;
+    left: 125px;
+    margin-top: 5px;
+    margin-left: 30.5%;
+    position: relative;
+    cursor: pointer;
+    border: 0;
+ }
+
+.product3 img {
+    width: 35%;
+    height: 60%;
+    margin-left: 75%;
+    margin-top: 10%;
+}
+
+.product3 {
+    position: relative;
+    width: 80%;
+    margin: 40px auto;
+    bottom: 88.9%;
+}
+
+.product3-title {
+    display:flex;
+    justify-content: space-between;
+    width: 30%;
+    margin-top: 15px;
+    align-items: flex-end;
+    margin-left: 75%;
+}
+
+.product3-title h4 {
+    color: #515769;
+}
+
+.product3-title p {
+    font-size: 13px;
+    margin-top: 2px;
+    color: #a6a7aa;
+    margin-bottom: 1px;
+}
+
+.styldiscr {
+    width:30%;
+    margin-left: 70%;
+    margin-top: -43.1%;
+}
+
+.styldiscr p {
+    font-size: 15px;
+    font-weight: 400;
+    margin-top: 10px;
+    color: #a6a7aa;
+    margin-bottom: 15px;
+}
+
+.btnmore3 span {
+    font-size: 13px;
+    font-weight: 600;
+    text-align: start;
+    width: 20%;
+    color: #81848f;
+ }   
+
+ .btnmore3 {
+    background-color: white;
+    left: 125px;
+    margin-top: 5px;
+    margin-left: 60%;
+    position: relative;
+    cursor: pointer;
+    border: 0;
+ }
+
+ .third-block {
+    display: flex;
+    width: 100%;
+    height: 100vh;
+ }
+
+ .photofirst img {
+     width: 100%;
+     height: 70%;
+     margin-right: 70%;
+ }
+
+ .photosecond img {
+    width: 100%;
+    height: 70%;
+    margin-left: 4px;
+ }
+
+.fifth-block {
+    display: flex;
+    width: 100%;
+    height: 100vh;
+}
+
+.artcoding img {
+    left: 10px;
+}
+
+.artcoding h3 {
+    font-size: 13px;
+    font-weight: 600;
+    text-align: start;
+    width: 20%;
+    color: #81848f;
+}
+
+.artcoding {
+    width: 80%;
+    margin: 40px auto;
+    bottom: 4px;
 }
