--- a/style.css
+++ b/style.css
@@ -46,7 +46,7 @@ header {
 .bgimage {
     background: url(./img/1920x1080/01.jpg) center center no-repeat;
     background-size: cover;
-    width: 100vw;
+    width: 100%;
     height: 80vh;
 }
 
@@ -56,7 +56,7 @@ header {
     z-index: 1;
     background-color: rgba(81, 87, 105, .4);
     position: absolute;
-    width: 100vw;
+    width: 100%;
     height: 80vh;
 }
 
@@ -199,14 +199,23 @@ width:100%;
 
  .photofirst img {
      width: 100%;
-     height: 70%;
+     height: 100%;
      margin-right: 70%;
+ }
+
+ .photofirst {
+     width: 50%;
+     height: 70%;
  }
 
  .photosecond img {
     width: 100%;
+    height: 100%;
+ }
+
+ .photosecond {
+    width: 50%;
     height: 70%;
-    margin-left: 4px;
  }
 
 .fourth-block {
@@ -220,12 +229,11 @@ width:100%;
 }
 
 .block4 {
-    margin-top: 10px;
-    margin-left: 10%;
     width: 14%;
     padding-left: 2px;
     padding-right: 4px;
     padding-bottom: 10px;
+    background-color: white;
 }
 
 
