--- a/style.css
+++ b/style.css
@@ -223,29 +223,71 @@ width:100%;
     flex-wrap: wrap;
     flex-direction: column;
     width: 100%;
-    height: 120vh;
+    height: 80vh;
     margin-top: -100px;
     background-color: whitesmoke;
 }
 
-.block4 {
+.block1 {
+    padding: 4px;
+    margin-inline: 10%;
     width: 14%;
-    padding-left: 2px;
-    padding-right: 4px;
-    padding-bottom: 10px;
+    padding-bottom: 20px;
     background-color: white;
+}
+
+.block2 {
+    padding: 4px;
+    margin-inline: 10%;
+    width: 14%;
+    padding-bottom: 20px;
+    background-color: white;
+}
+
+.block3 {
+    margin-inline: 10%;
+    width: 14%;
+    padding-bottom: 20px;
+    background-color: white;
+}
+
+.block4 {
+    margin-inline: 10%;
+    width: 14%;
+    padding-bottom: 20px;
+    background-color: white;
+}
+
+.block5 {
+    margin-inline: 10%;
+    width: 14%;
+    padding-bottom: 20px;
+    background-color: white;
+}
+
+.block6 {
+    margin-inline: 10%;
+    width: 14%;
+    padding-bottom: 20px;
+    background-color: white;
+}
+
+.artcoding {
 }
 
 
 .artcoding img {
-    width: 30%;
+    width: 20%;
     left: 5px;
 }
 
 .artcoding h3 {
-    font-size: 13px;
+    font-size: 20px;
     font-weight: 600;
-    text-align: start;
-    width: 20%;
+    text-align: center;
+    width: 25%;
 }
 
+.artcoding p {
+    text-align: start;
+}
