--- a/style.css
+++ b/style.css
@@ -334,3 +334,66 @@ width:100%;
 .secondimg {
     width: 38.7%;
 }
+
+.seven-block {
+    position: relative;
+    top: 100px;
+    width: 100%;
+    height: 100vh;
+    background-color: whitesmoke;
+}
+
+.threebloks {
+    display: flex;
+    width: 92%;
+    margin: auto;
+    height: 80vh;
+}
+
+.page {
+    background-color: white;
+    margin-top: 90px;
+    height: 80%;
+    width: 80%;
+}
+
+.page:nth-child(2) {
+    margin: 45px 3px 0 3px;
+    height: 100%;
+}
+
+.wrapper {
+    display: flex;
+    align-items: flex-end;
+    margin: 20px 30px ;
+}
+
+.wrapper h3 {
+    display: block;
+    margin-right: 5px;
+}
+
+.wrapper h5 {
+    display: block;
+    color: #7f838fe0;
+    margin-right: 5px;
+    margin-left: 5px;
+}
+
+
+.page img {
+    width: 15%;
+    margin-left: 15px;
+    margin-top: 40px;
+}
+
+.page p {
+    color: #7f838fe0;
+    margin-left: 28px;
+    margin-right: 40px;
+}
+
+.page span {
+    color: #7f838fe0;
+    font-size: 13px;
+}
